@@ -1,5 +1,5 @@
 /***************************************************************************
- *   Copyright (C) 2015-2018 by Walter Brisken                             *
+ *   Copyright (C) 2015-2019 by Walter Brisken                             *
  *                                                                         *
  *   This program is free software; you can redistribute it and/or modify  *
  *   it under the terms of the GNU General Public License as published by  *
@@ -27,25 +27,30 @@
 //
 //============================================================================
 
+#define _GNU_SOURCE
+
 #include <stdio.h>
 #include <string.h>
 #include <stdlib.h>
+#include <fnmatch.h>
 #include "mark6gather.h"
 
 const char program[] = "mk6ls";
 const char author[]  = "Walter Brisken <wbrisken@nrao.edu>";
-const char version[] = "0.3";
-const char verdate[] = "20180905";
+const char version[] = "0.4";
+const char verdate[] = "20191031";
 
 void usage(const char *pgm)
 {
 	fprintf(stderr, "\n%s ver. %s  %s  %s\n\n", program, version, author, verdate);
-	fprintf(stderr, "Usage: %s [options]\n\n", pgm);
+	fprintf(stderr, "Usage: %s [options] [list of files or patterns]\n\n", pgm);
 	fprintf(stderr, "Options can include:\n");
 	fprintf(stderr, "  --help\n");
 	fprintf(stderr, "  -h        Print this help info and quit\n\n");
 	fprintf(stderr, "  --short\n");
-	fprintf(stderr, "  -s        Print short form output [default]\n\n");
+	fprintf(stderr, "  -s        Print just file name [default]\n\n");
+	fprintf(stderr, "  --bytes\n");
+	fprintf(stderr, "  -b        Print file name and size\n\n");
 	fprintf(stderr, "  --long\n");
 	fprintf(stderr, "  -l        Print long form output\n\n");
 	fprintf(stderr, "  --full\n");
@@ -55,13 +60,41 @@ void usage(const char *pgm)
 	fprintf(stderr, "               Default is /mnt/disks/*/*/data\n\n");
 }
 
+int matches(const char *fileName, char **pattern, unsigned int nPattern)
+{
+	if(nPattern == 0)
+	{
+		return 1;	/* default match everything */
+	}
+	else
+	{
+		int p;
+
+		for(p = 0; p < nPattern; ++p)
+		{
+			if(fnmatch(pattern[p], fileName, FNM_CASEFOLD) == 0)
+			{
+				return 1;
+			}
+		}
+	}
+
+	return 0;
+}
+
 int main(int argc, char **argv)
 {
 	char **fileList;
+	char **pattern;
+	long long int *sizeList = 0;
 	int n;
 	int a;
 	int longPrint = 0;
 	int fullPrint = 0;
+	int sizePrint = 0;
+	unsigned int nPattern = 0;
+
+	pattern = (char **)malloc(argc*sizeof(char *));
 
 	for(a = 1; a < argc; ++a)
 	{
@@ -69,16 +102,25 @@ int main(int argc, char **argv)
 		{
 			longPrint = 1;
 			fullPrint = 0;
+			sizePrint = 0;
 		}
 		else if(strcmp(argv[a], "-f") == 0 || strcmp(argv[a], "--full") == 0)
 		{
 			longPrint = 0;
 			fullPrint = 1;
+			sizePrint = 0;
+		}
+		else if(strcmp(argv[a], "-b") == 0 || strcmp(argv[a], "--bytes") == 0)
+		{
+			longPrint = 0;
+			fullPrint = 0;
+			sizePrint = 1;
 		}
 		else if(strcmp(argv[a], "-s") == 0 || strcmp(argv[a], "--short") == 0)
 		{
 			longPrint = 0;
 			fullPrint = 0;
+			sizePrint = 0;
 		}
 		else if(strcmp(argv[a], "-h") == 0 || strcmp(argv[a], "--help") == 0)
 		{
@@ -86,9 +128,21 @@ int main(int argc, char **argv)
 
 			return EXIT_SUCCESS;
 		}
+		else if(argv[a][0] != '-')
+		{
+			pattern[nPattern] = argv[a];
+			++nPattern;
+		}
 	}
 
-	n = getMark6FileList(&fileList);
+	if(sizePrint)
+	{
+		n = getMark6FileListWithSizes(&fileList, &sizeList);
+	}
+	else
+	{
+		n = getMark6FileList(&fileList);
+	}
 
 	if(n == 0)
 	{
@@ -100,6 +154,11 @@ int main(int argc, char **argv)
 
 		for(i = 0; i < n; ++i)
 		{
+			if(matches(fileList[i], pattern, nPattern) == 0)
+			{
+				continue;
+			}
+
 			if(fullPrint)
 			{
 				Mark6Gatherer *G;
@@ -139,6 +198,10 @@ int main(int argc, char **argv)
 					printf("%s  (invalid Mark6 file)\n", fileList[i]);
 				}
 			}
+			else if(sizePrint)
+			{
+				printf("%s %Ld\n", fileList[i], sizeList[i]);
+			}
 			else
 			{
 				printf("%s\n", fileList[i]);
@@ -150,6 +213,12 @@ int main(int argc, char **argv)
 			free(fileList[i]);
 		}
 		free(fileList);
+		free(pattern);
+	}
+
+	if(sizeList)
+	{
+		free(sizeList);
 	}
 
 
